Add day 10 solution