@@ -100,7 +100,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
-          <argLine>${surefireArgLine}</argLine>
+          <argLine>--enable-preview ${surefireArgLine}</argLine>
         </configuration>
       </plugin>
     </plugins>
